--- a/gh-weblog-2/content/posts/markdown/2015-02-16-19-25-34.md
+++ b/gh-weblog-2/content/posts/markdown/2015-02-16-19-25-34.md
@@ -10,13 +10,13 @@ You might not even have thought about that, but: that's messed up.
 
 Second, it gets creepy, because if you do want to log in to leave comments, Medium doesn't just ask for the permissions necessary to log you in, they also want permission to post content on your behalf on your social medium of choice. On the one hand, that makes sense: their site has a service that lets you highlight some text, and then instantly tweet that text or post it on Facebook so people can visit the great article you discovered. But on the other hand: *this is insane*, because you're being asked by a content service (which inherently cannot care about your personal online integrity) for full power to pretend to be you and voice opinions on your behalf without having to ask permission on a post-by-post basis. Because that's the potential you're handing over.
 
-Now, Medium [is adamant](https://twitter.com/TheRealPomax/status/559763695480229888) that they only need this to enable their "highlight text to tweet about that text" functionality, and that kind of sounds rational? But as someone who is perfectly comfortable doing that myself, I have no intention of giving Medium the right to write random things into my Twitter stream, just because they say they won't abuse that power. And, while this may be hard for a great service run by decent human beings to understand, I don't trust Medium in the slightest to keep their promise, and I don't think they have anything in place to actually ensure that they cannot break it. I suspect it's entirely a verbal agreement, and a verbal agreement is not strong enough for me to hand over the keys to my house, or the rights to tweet on my behalf. Medium is demanding far more than it deserves, and it's fascinating to see most people not caring about that in the slightest. Especially Medium themselves. A login system for leaving comments is not really all that important, but when you stop to think about it, it actually is. Incredibly so.
+Now, Medium is adamant that they only need this to enable their "highlight text to tweet about that text" functionality, and that kind of sounds rational? But as someone who is perfectly comfortable doing that myself, I have no intention of giving Medium the right to write random things into my Twitter stream, just because they say they won't abuse that power. And, while this may be hard for a great service run by decent human beings to understand, I don't trust Medium in the slightest to keep their promise, and I don't think they have anything in place to actually ensure that they cannot break it. I suspect it's entirely a verbal agreement, and a verbal agreement is not strong enough for me to hand over the keys to my house, or the rights to tweet on my behalf. Medium is demanding far more than it deserves, and it's fascinating to see most people not caring about that in the slightest. Especially Medium themselves. A login system for leaving comments is not really all that important, but when you stop to think about it, it actually is. Incredibly so.
 
 Does it matter that you won't see my comments? Likely not, but does it matter that Medium has set up a walled garden, where you either have to let them into your life by effectively handing over your passwords, or forever hold your peace? Kind of, yeah. It's easy to go hyperbole, so I won't, but I will say that if you're okay with this commenting model, you are doing the entire internet a disservice, making creepy practices (note: **practices**, not services, I love Medium, it's only their login policy that's insane) acceptable instead of questioning them and going "look: this system you've come up with might work for you, but it's not good enough. In fact, it's kind of creepy, and you need to do better because for one, you can, and more importantly: we, the world, deserve better".
 
 So that's my beef. I think Medium is making the internet a lot better by giving us quality content, and I think that at the same time they're making it quite a bit worse by mixing that content with "hand over your online behaviour to companies that make money off of that" as well as "we demand the right to say things as if we were you in your social networks", before we, the readers, can reach out to article authors with potentially valuable information.
 
-And if you think those concerns are silly, that's fine.  In fact, you're probably entirely safe sending me your home address and a copy of your house key, because I genuinely promise I won't come in whenever I like and use your online identity for my own purposes. After all, [this stuff](https://support.twitter.com/forms/impersonation) [doesn't really matter](http://www.datagenetics.com/blog/june42013) [at all](https://amyraineymcdm.wordpress.com/law-final-project/2-twitter-impersonation-cases), [right](http://www.theverge.com/2015/1/27/7921965/taylor-swifts-twitter-account-hacked)? And having someone tweet on your behalf on *your own account* is nothing like having your account stolen or impersonated. And it's impossible for people who you didn't give permissions to, but have access to the systems you did, to come in and abuse that, of course. 
+And if you think those concerns are silly, that's fine.  In fact, you're probably entirely safe sending me your home address and a copy of your house key, because I genuinely promise I won't come in whenever I like and use your online identity for my own purposes. After all, [this stuff](https://support.twitter.com/forms/impersonation) [doesn't really matter](http://www.datagenetics.com/blog/june42013) [at all](https://amyraineymcdm.wordpress.com/law-final-project/2-twitter-impersonation-cases), [right](http://www.theverge.com/2015/1/27/7921965/taylor-swifts-twitter-account-hacked)? And having someone tweet on your behalf on *your own account* is nothing like having your account stolen or impersonated. And it's impossible for people who you didn't give permissions to, but have access to the systems you did, to come in and abuse that, of course.
 
 See how easy it is to forget that privacy might matter?
 
