--- a/gh-weblog-2/content/posts/markdown/2015-08-06-20-02-06.md
+++ b/gh-weblog-2/content/posts/markdown/2015-08-06-20-02-06.md
@@ -373,4 +373,4 @@ So: pinch-folding. It's a good thing.
 
 ## And that's it: go make some bread!
 
-And if you have any questions of comments, hit that comment [link in the lower left](http://github.com/pomax/pomax.github.io/issues), or tweet at me [@TheRealPomax](https://twitter.com/therealpomax) and I'll be happy to engage with your on the finer points of breadification.
+And if you have any questions of comments, hit that comment [link in the lower left](http://github.com/pomax/pomax.github.io/issues), or toot at me [@TheRealPomax](https://mastodon.social/@TheRealPomax) and I'll be happy to engage with your on the finer points of breadification.
