--- a/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-01-03-05-30.md
@@ -10,7 +10,7 @@ First off, a React codebase needs bundling, and generally also some [JSX](https:
 ./
  |-<components>
  |-<images>
- |-<lib> 
+ |-<lib>
  |-<stylesheets>
  | package.json
  | webpack.config.js
@@ -62,8 +62,8 @@ Two commands, a short `$> npm start` for dev work, since that gets run all the t
 One thing I hate when doing rewrites is "changing everything" to suit the technology. The article as it exists relies on LaTeX that takes the following form:
 ```
 <p>\[
-  f(x) = \sum^n_{k=0} \frac{n(n-k)}{k! + x} 
-\]</p> 
+  f(x) = \sum^n_{k=0} \frac{n(n-k)}{k! + x}
+\]</p>
 ```
 
 That's a pretty standard format if you use MathJax, or [KaTeX](https://github.com/Khan/KaTeX), and since I use a *lot* of LaTeX, that format had to stay. And that's a bit of a problem, because LaTeX uses a lot of curly brackets. And React's JSX syntax treats curly brackets as templating delimiters.
@@ -108,7 +108,7 @@ function hasLaTeX(input) {
 }
 
 /**
- * We look for MathJax/KaTeX style data, and convert it to something JSX-safe 
+ * We look for MathJax/KaTeX style data, and convert it to something JSX-safe
  */
 function escapeBlockLaTeX(source) {
   // MAGIC HAPPENS HERE!
@@ -154,7 +154,7 @@ function escapeBlockLaTeX(source) {
   }
   return newsource + source.substring(from);
 }
-``` 
+```
 
 Except... we can't.
 
@@ -166,7 +166,7 @@ MathJax can't do that. It relies on quite a few asynchronous things (like font l
 ```
 module.exports = function webpackloader(input) {
   return formOutput(input);
-}  
+}
 ```
 MathJax has a function API like this:
 ```
@@ -222,8 +222,8 @@ But not quite: this is not exactly a cheap thing to do. Firing up an instance of
 
 So, let's add in some caching: instead of having the MathJax script do the conversion for us, and then spit out the SVG code, we make it do the conversion but then write the SVG code to file, in the images dir.
 
-And because we don't want the build process to do more work than necessary, we make the filenames predictable, based on the LaTeX that needs to be converted: we compute the [sha1 digest](https://en.wikipedia.org/wiki/SHA-1) of the LaTeX that needs converting, and only if we don't see a file called `<hash>.svg` in the images dir do we do our conversion:  
-    
+And because we don't want the build process to do more work than necessary, we make the filenames predictable, based on the LaTeX that needs to be converted: we compute the [sha1 digest](https://en.wikipedia.org/wiki/SHA-1) of the LaTeX that needs converting, and only if we don't see a file called `<hash>.svg` in the images dir do we do our conversion:
+
 ```
 var sha1 = require("sha1");
 
@@ -231,17 +231,17 @@ function escapeBlockLaTeX(source) {
   ...
   for(...) {
     latex = ...;
-    
+
     // Get the digest for the latex - any subsequent checks for the same block
     // of LaTeX will yield the exact same digest, which is handy!
     var hash = sha1.hash(latex);
-    
+
     // Whether the SVG for this LaTeX already exists or not, we already know
-    // the filename it's going to have, so we can prebuild the JSX we need:  
+    // the filename it's going to have, so we can prebuild the JSX we need:
     var imgHTML = '<img src="' + hash + '.svg" className="LaTeX SVG"/>';
 
     // Then: do we need to generate this image first? If so, execSync,
-    // otherwise we do absolutely nothing because we're already done!  
+    // otherwise we do absolutely nothing because we're already done!
     if (!imageExists(hash)) {
       var base64 = new Buffer(latex).toString("base64");
       execSync("node tex2svg.js --hash " + hash +" --base64 " + base64);
@@ -265,4 +265,4 @@ Instead of every individual user needing to wait for MathJax to do typesetting, 
 
 I can add sections one at a time, and every time I run the build step, only genuinely new LaTeX will need to get converted. LaTeX that got processed during a previous run already wrote files to disk, so the latex-loader just bypasses the conversion process entirely for those LaTeX blocks, and so the build really only does exactly as much work as it needs to do to get the data transformed.
 
-Needless to say, I am chuffed to bits about this, and if you have any questions about the process, feel free to reach out to me [on twitter](https://twitter.com/TheRealPomax) or [on github](https://github.com/Pomax/BezierInfo-2/issues), and I'll be happy to talk about it more.
+Needless to say, I am chuffed to bits about this, and if you have any questions about the process, feel free to reach out to me [on Mastodon](https://mastodon.social/@TheRealPomax) or [on github](https://github.com/Pomax/BezierInfo-2/issues), and I'll be happy to talk about it more.
