--- a/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
+++ b/gh-weblog-2/content/posts/markdown/2016-01-19-19-27-59.md
@@ -71,8 +71,8 @@ Quite a lot, but all of that's covered by [the git book](https://git-scm.com/boo
 
 You can use the `git-gui` command. This will ask you (if you "just run it") whether to create a new repository, or manage an existing one. I'm not going to explain how to use that, because  I never use it, but it can do all the things this post talked about.
 
-# That's it, we're done. 
+# That's it, we're done.
 
-Go use version control. You *litearlly* have no excuse not to. And if you have any questions or comments, you can either leave those over on github (see the link below this post) or just tweet at me [@TheRealPomax](http://twitter.com/TheRealPomax).
+Go use version control. You *litearlly* have no excuse not to. And if you have any questions or comments, you can either leave those over on github (see the link below this post) or just toot at me [@TheRealPomax](https://mastodon.social/@TheRealPomax).
 
 Version control your files, because you shouldn't be able to be your own enemy.
