Saving new entry 2023-08-05-17-07-24

--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -2,11 +2,104 @@ Let me preface this by saying that every single person who thinks that mingw or 
 
 With that out of the way, let's write some code in Rust that we can call from Node.js so that we get the best of both worlds: the ease of development of Node.js, with the "I need this to be fast" parts handled by natively compiled code.
 
-- install LLVM because you'll need LLD
-- create a `C:\Users\yournamehere\.cargo\config` file and add the following code to it:
+- [install LLVM](https://github.com/llvm/llvm-project/releases/ because you'll need LLD (click "show all ... assets" and download the windows version)
+- [install Rust](https://www.rust-lang.org/tools/install)
+- check to see if you have a `C:\Users\yournamehere\.cargo\config` file, and if not, create one.
+
+Open the cargo config file, and add the following to it:
 
 ```
 [target.x86_64-pc-windows-msvc]
 linker = "lld-link.exe"
 ```
--
+
+Rust now knows that it's building for the Windows platform. Beauty.
+
+Next up, we'll need Node.js
+
+- install [nvm-windows](https://github.com/coreybutler/nvm-windows)
+- run `nvm install lts` to install the current [LTS](https://en.wikipedia.org/wiki/Long-term_support) version of Node
+
+And we're good to go. Let's start by creating a new project by running `cargo new testlib` and then changing a few things because we want Rust to build us a library, not an executable:
+
+1. rename `src/main.rs` to `src/lib.rs`,
+1. add a section called `[lib]` to the `Cargo.toml` file, and
+1. add `crate-type = ["cdylib"]` in that new section.
+
+This tells Rust that it will be compiling a shared library appropriate to the OS we build it on. Since we're on Windows, it'll be generating `.dll` files.
+
+And with that, let's put some Rust code in our `lib.rs`!
+
+```rust
+// Tell Rust that we want our ABI to be C flavoured:
+#[repr(C)]
+
+// Create the equivalent of a Vec3:
+pub struct Orientation {
+  pitch: f64,
+  roll: f64,
+  yaw: f64,
+}
+
+// Give that struct an .add() function:
+impl Orientation {
+  fn add(&mut self, pitch: f64, roll: f64, yaw:f64) -> &mut Orientation {
+    self.pitch += pitch;
+    self.roll += roll;
+    self.yaw += yaw;
+    return self;
+  }
+}
+
+// And then let's write a function that takes an Orientation as input,
+// does "something", and then returns that Orietation as output:
+#[no_mangle]
+pub extern fn orientation_test(s: &mut Orientation) -> &mut Orientation {
+  return s.add(1.0, 2.0, 3.0);
+}
+```
+
+If you're familiar with Rust none of this should be too surprising, but you might notice the `#[repr(C)]`, which tells Rust that we want the library's [application binary interface](https://en.wikipedia.org/wiki/Application_binary_interface) to conform to the C version, because Node only knows how to work with C flavoured ABIs. You might also notice the `#[no_mangle]` which is _super_ important: by default Rust will optimize function names, which is convenient for generating smaller executables but is _disastrous_ for libraries, where the point is that we want to call functions that we export _using the name we gave them_. So we tell Rust not to mangle the function name.
+
+And that's it, we can now run `cargo build` and it'll generate us a `target/debug/testlib.dll` file to use in "whatever knows how to import DLL files"!
+
+So let's move on to Node. We're first going to initialize the Rust project as a Node project, too, using `npm init`, after which we need to install something that'll let us work with DLL files, i.e. we want an [FFI](https://en.wikipedia.org/wiki/Foreign_function_interface) solution, and the one we'll be using is [koffi](https://koffi.dev/): `npm install koffi` and we're good to go.
+
+Let's create a `test.js` and make it use our DLL file!
+
+```js
+// First we import koffi and load our library, using the extension appropriate to our OS.
+// Remember, just because we're on Windows doesn't mean we should be LOCKED into Windows!
+import koffi from "koffi";
+const { platform } = process;
+const libraryPath = `./target/debug/testlib.${
+  platform === `win32` ? `dll` : `so`
+}`;
+const lib = koffi.load(libraryPath);
+
+// Then we'll need a JS-equivalent of the struct our library uses:
+const Orientation = koffi.struct(`Orientation`, {
+  pitch: `double`,
+  roll: `double`,
+  yaw: `double`,
+});
+
+// And of course, we need a function handle, which requires specifying the function name we
+// want from the library, as well as what output it generates, given which inputs:
+const orientationTest = lib.func(`orientation_test`, Orientation, [Orientation]);
+
+// And with that we're ready to run some native code!
+const data = { pitch: 0, roll: 0, yaw: 0 };
+let result = data;
+const start = performance.now();
+for(let i=0; i<10000; i++) result = orientationTest(result);
+console.log(`test result:`, result, `- 10,000 iterations took ${(performance.now() - start)|0}ms`);
+```
+
+If we now run this using `node test.js` we see:
+
+```
+test result: { pitch: 10000, roll: 20000, yaw: 30000 } - 10,000 iterations took 13ms
+```
+
+How cool is that? We're no longer stuck with running code at the speed of JS, we can run code at _native_ speed by handing the number-crunchy, resource -intensive parts over to Rust, while keeping the convenient of JS for all the other parts of our code. It's the best of both worlds!
