--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -2,9 +2,9 @@ Let me preface this by saying that every single person who thinks that mingw or 
 
 With that out of the way, let's write some code in Rust that we can call from Node.js so that we get the best of both worlds: the ease of development of Node.js, with the "I need this to be fast" parts handled by natively compiled code.
 
-- [install LLVM](https://github.com/llvm/llvm-project/releases/ because you'll need LLD (click "show all ... assets" and download the windows version)
-- [install Rust](https://www.rust-lang.org/tools/install)
-- check to see if you have a `C:\Users\yournamehere\.cargo\config` file, and if not, create one.
+- [install LLVM](https://github.com/llvm/llvm-project/releases/ because you'll need LLD (click "show all ... assets" and download the windows version), because we'll need the LLD tool that comes with it,
+- [install Rust](https://www.rust-lang.org/tools/install), and then
+- check to see if you have a `C:\Users\yournamehere\.cargo\config` file. If you don't, create one.
 
 Open the cargo config file, and add the following to it:
 
