Saving new entry 2023-08-05-17-07-24

--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -1,6 +1,6 @@
-Let me preface this by saying that every single person who thinks that mingw or msys are valid excuses for not targeting true windows is actively making life worse for large swathes of developers. You're not helping. Windows applications and libraries should work on Windows, using the Windows platform.
+Let me preface this by saying that every single person who claims that `mingw`, or `msys`, or "you have `WSL2`, just use that" are valid excuses to not target actual Windows is actively making life worse for large swathes of developers, and if that's you, you're not making the world a better place. Applications and libraries should work on any OS, including Windows, cross-platform compiled for each =)
 
-With that out of the way, let's write some code in Rust that we can call from Node.js so that we get the best of both worlds: the ease of development of Node.js, with the "I need this to be fast" parts handled by natively compiled code.
+With that out of the way: let's write some code in Rust that we can call from Node.js so that we get the best of both worlds: the ease of development of Node.js, with the "I need this to be fast" parts handled by natively compiled code.
 
 - [install LLVM](https://github.com/llvm/llvm-project/releases/ because you'll need LLD (click "show all ... assets" and download the windows version), because we'll need the LLD tool that comes with it,
 - [install Rust](https://www.rust-lang.org/tools/install), and then
