Saving new entry 2023-08-05-17-07-24

--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -3,10 +3,11 @@ Let me preface this by saying that every single person who claims that `mingw`, 
 With that out of the way: let's write some code in Rust that we can call from Node.js so that we get the best of both worlds: the ease of development of Node.js, with the "I need this to be fast" parts handled by natively compiled code.
 
 - [install LLVM](https://github.com/llvm/llvm-project/releases/ because you'll need LLD (click "show all ... assets" and download the windows version), because we'll need the LLD tool that comes with it,
-- [install Rust](https://www.rust-lang.org/tools/install), and then
-- check to see if you have a `C:\Users\yournamehere\.cargo\config` file. If you don't, create one.
+- [install Rust](https://www.rust-lang.org/tools/install),
+- check to see if you have a `C:\Users\yournamehere\.cargo\config` file. If you don't, create one, and
+- run `rustup target add x86_64-pc-windows-msvc`.
 
-Open the cargo config file, and add the following to it:
+Then open the cargo config file, and add the following to it:
 
 ```
 [target.x86_64-pc-windows-msvc]
