--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -60,7 +60,7 @@ pub extern fn orientation_test(s: &mut Orientation) -> &mut Orientation {
 }
 ```
 
-If you're familiar with Rust none of this should be too surprising, but you might notice the `#[repr(C)]`, which tells Rust that we want the library's [application binary interface](https://en.wikipedia.org/wiki/Application_binary_interface) to conform to the C version, because Node only knows how to work with C flavoured ABIs. You might also notice the `#[no_mangle]` which is _super_ important: by default Rust will optimize function names, which is convenient for generating smaller executables but is _disastrous_ for libraries, where the point is that we want to call functions that we export _using the name we gave them_. So we tell Rust not to mangle the function name.
+If you're familiar with Rust none of this should be too surprising, but you might notice the `#[repr(C)]`, which tells Rust that we want the library's [application binary interface](https://en.wikipedia.org/wiki/Application_binary_interface) to conform to the C version, because Node only knows how to work with C flavoured ABIs. You might also notice the `#[no_mangle]` which is _super_ important: by default Rust will optimize function names, which is convenient for generating smaller executables but is _disastrous_ for libraries, where the point is that we want to call functions that we export _using the name we gave them_. So we tell Rust not to mangle the function name. And of course, everything we want to make use of on the Node side gets a `pub` so that it's visible to the outside world.
 
 And that's it, we can now run `cargo build` and it'll generate us a `target/debug/testlib.dll` file to use in "whatever knows how to import DLL files"!
 
