Saving new entry 2023-08-05-17-07-24

--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -1,4 +1,4 @@
-Let me preface this by saying that every single person who claims that `mingw`, or `msys`, or "you have `WSL2`, just use that" are valid excuses to not target actual Windows is actively making life worse for large swathes of developers, and if that's you, you're not making the world a better place. Applications and libraries should work on any OS, including Windows, cross-platform compiled for each =)
+Let me preface this by saying that every single person who claims that `mingw`, or `msys`, or "you have `WSL2`, just use that" are valid excuses to not target actual Windows is actively making life worse for large swathes of developers, and if that's you, please be better. Applications and libraries should work on any OS, including Windows: just cross-platform compile your software instead of making it someone else's problem =)
 
 With that out of the way: let's write some code in Rust that we can call from Node.js so that we get the best of both worlds: the ease of development of Node.js, with the "I need this to be fast" parts handled by natively compiled code.
 
