Saving new entry 2023-08-05-17-07-24

--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -62,11 +62,13 @@ pub extern fn orientation_test(s: &mut Orientation) -> &mut Orientation {
 }
 ```
 
-If you're familiar with Rust none of this should be too surprising, but you might notice the `#[repr(C)]`, which tells Rust that we want the library's [application binary interface](https://en.wikipedia.org/wiki/Application_binary_interface) to conform to the C version, because Node only knows how to work with C flavoured ABIs. You might also notice the `#[no_mangle]` which is _super_ important: by default Rust will optimize function names, which is convenient for generating smaller executables but is _disastrous_ for libraries, where the point is that we want to call functions that we export _using the name we gave them_. So we tell Rust not to mangle the function name. And of course, everything we want to make use of on the Node side gets a `pub` so that it's visible to the outside world.
+If you're familiar with Rust none of this should be too surprising, but you might notice the `#[repr(C)]`, which tells Rust that we want the library's [application binary interface](https://en.wikipedia.org/wiki/Application_binary_interface) (ABI) to conform to the C version, because Node only knows how to work with C flavoured ABIs. You might also notice the `#[no_mangle]` which is _super_ important: by default Rust will optimize function names, which is convenient for generating smaller executables but is _disastrous_ for libraries, where the point is that we want to call functions that we export _using the name we gave them_. So we tell Rust not to mangle the function name. And of course, everything we want to make use of on the Node side gets a `pub` so that it's visible to the outside world.
 
 And that's it, we can now run `cargo build` and it'll generate us a `target/debug/testlib.dll` file to use in "whatever knows how to import DLL files"!
 
-So let's move on to Node. We're first going to initialize the Rust project as a Node project, too, using `npm init`, after which we need to install something that'll let us work with DLL files, i.e. we want an [FFI](https://en.wikipedia.org/wiki/Foreign_function_interface) solution, and the one we'll be using is [koffi](https://koffi.dev/): `npm install koffi` and we're good to go.
+So let's move on to Node. We're first going to initialize the Rust project as a Node project, too, using `npm init`, after which we need to install something that'll let us work with DLL files, i.e. we want an [foreign function interface](https://en.wikipedia.org/wiki/Foreign_function_interface) (FFI) solution, and the one we'll be using is [koffi](https://koffi.dev/): `npm install koffi` and we're good to go.
+
+(There are other options, but after trying pretty much every FFI solution that exists for Node, `koffi` was by far the most pleasant to work with. Which is pretty important!)
 
 Let's create a `test.js` and make it use our DLL file!
 
