Saving new entry 2023-08-05-17-07-24

--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -76,10 +76,7 @@ Let's create a `test.js` and make it use our DLL file!
 // First we import koffi and load our library, using the extension appropriate to our OS.
 // Remember, just because we're on Windows doesn't mean we should be LOCKED into Windows!
 import koffi from "koffi";
-const { platform } = process;
-const libraryPath = `./target/debug/testlib.${
-  platform === `win32` ? `dll` : `so`
-}`;
+const libraryPath = `./target/debug/testlib.${process.platform === `win32` ? `dll` : `so`}`;
 const lib = koffi.load(libraryPath);
 
 // Then we'll need a JS-equivalent of the struct our library uses:
