Saving new entry 2023-08-05-17-07-24

--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -91,11 +91,21 @@ const Orientation = koffi.struct(`Orientation`, {
 const orientationTest = lib.func(`orientation_test`, Orientation, [Orientation]);
 
 // And with that we're ready to run some native code!
-const data = { pitch: 0, roll: 0, yaw: 0 };
+const data = {
+    pitch: 0,
+    roll: 0,
+    yaw: 0,
+};
+
 let result = data;
+
 const start = performance.now();
-for(let i=0; i<10000; i++) result = orientationTest(result);
-console.log(`test result:`, result, `- 10,000 iterations took ${(performance.now() - start)|0}ms`);
+for(let i=0; i<10000; i++) {
+    result = orientationTest(result);
+}
+const timeTaken = (performance.now() - start)|0;
+
+console.log(`test result:`, result, `- 10,000 iterations took ${timeTaken}ms`);
 ```
 
 If we now run this using `node test.js` we see:
