--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -114,4 +114,4 @@ If we now run this using `node test.js` we see:
 test result: { pitch: 10000, roll: 20000, yaw: 30000 } - 10,000 iterations took 13ms
 ```
 
-How cool is that? We're no longer stuck with running code at the speed of JS, we can run code at _native_ speed by handing the number-crunchy, resource -intensive parts over to Rust, while keeping the convenient of JS for all the other parts of our code. It's the best of both worlds!
+How cool is that? We're no longer stuck with running code at the speed of JS, we can run code at _native_ speed by handing the number-crunchy, resource-intensive parts over to Rust, while keeping the convenience of JS for all the other parts of our code. It's the best of both worlds!
