--- a/gh-weblog-2/content/posts/markdown/2023-04-15-19-07-50.md
+++ b/gh-weblog-2/content/posts/markdown/2023-04-15-19-07-50.md
@@ -1,6 +1,6 @@
 In October of 2022, Elon Musk, a man who failed up harder than anyone else in history, decided to buy Twitter with the express intent to turn it into a completely different product. He laid off thousands of people, devalued the company by 50%, and started pushing through changes that not only changed the experience of the platform, but also made sure that you had no way of actually seeing the content you wanted, while at the same time pushing ads into every single stream presented to you.
 
-I signed up for Twitter back in 2009, and it's fun a (mostly) fun ride, but even when it wasn't, there were always two things preventing folks from leaving the platform: (1) it was rarely *that* bad, and (2) there was no genuine alternative. 
+I signed up for Twitter back in 2009, and it's been a (mostly) fun ride, but even when it wasn't, there were always two things preventing folks from leaving the platform: (1) it was rarely *that* bad, and (2) there was no genuine alternative. 
 
 Both those things changed in recent years. For several years now, Mastodon has been an alternative to Twitter, and with Elon's destruction of Twitter the number of both Mastodon users and Mastodon servers has exploded. It's now a perfectly fine alternative with plenty of folks to follow. No, they're not all on the same server, but it's not like you had problems sending emails to people who didn't use your email server before, and this is the same. Just follow them, irrespective of which server they happen to use. Done, you just need to know their "homepage", hardly a chore.
 
