Saving new entry 2023-04-15-19-07-50

--- a/gh-weblog-2/content/posts/markdown/2023-04-15-19-07-50.md
+++ b/gh-weblog-2/content/posts/markdown/2023-04-15-19-07-50.md
@@ -4,6 +4,6 @@ I signed up for Twitter back in 2009, and it's been a (mostly) fun ride, but eve
 
 Both those things changed in recent years. For several years now, Mastodon has been an alternative to Twitter, and with Elon's destruction of Twitter the number of both Mastodon users and Mastodon servers has exploded. It's now a perfectly fine alternative with plenty of folks to follow. No, they're not all on the same server, but it's not like you had problems sending emails to people who didn't use your email server before, and this is the same. Just follow them, irrespective of which server they happen to use. Done, you just need to know their "homepage", hardly a chore.
 
-So as Musk lands more and garbage features in a desperate attempt to short-term claw back money, I'm calling it quits. To prevent people from namesquatting, I'm keeping my twitter account, and I'm not deleting any old tweets, but I'll be using mastodon exclusively from now on. 
+So as Musk lands more and more garbage features in a desperate attempt to short-term claw back money, I'm calling it quits. To prevent people from namesquatting, I've deleted my account, waiting the prerequisite 30 day period for it to become available again, and reregistered my name but won't be posting using it. Instead, I'll be using mastodon exclusively from now on. 
 
-Find me over on https://mastodon.social/@TheRealPomax
+You can find me over on https://mastodon.social/@TheRealPomax
