Saving new entry 2023-08-05-17-07-24

--- a/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
+++ b/gh-weblog-2/content/posts/markdown/2023-08-05-17-07-24.md
@@ -66,11 +66,11 @@ If you're familiar with Rust none of this should be too surprising, but you migh
 
 And that's it, we can now run `cargo build` and it'll generate us a `target/debug/testlib.dll` file to use in "whatever knows how to import DLL files"!
 
-So let's move on to Node. We're first going to initialize the Rust project as a Node project, too, using `npm init`, after which we need to install something that'll let us work with DLL files, i.e. we want an [foreign function interface](https://en.wikipedia.org/wiki/Foreign_function_interface) (FFI) solution, and the one we'll be using is [koffi](https://koffi.dev/): `npm install koffi` and we're good to go.
+So let's move on to Node. We're first going to initialize the Rust project as a Node project, too, using `npm init`, after which we need to install something that'll let us work with DLL files, i.e. we want an [foreign function interface](https://en.wikipedia.org/wiki/Foreign_function_interface) (FFI) solution, and the one we'll be using is [koffi](https://koffi.dev/): `npm install koffi`.
 
 (There are other options, but after trying pretty much every FFI solution that exists for Node, `koffi` was by far the most pleasant to work with. Which is pretty important!)
 
-Let's create a `test.js` and make it use our DLL file!
+We then edit our `package.json` to include a `"type": "module"` because it's 2023 and we'll be writing modern JS with modern ES modules instead of using the legacy Node-only CommonJS module system, and we're good to go, let's create a `test.js` and make it use our DLL file!
 
 ```js
 // First we import koffi and load our library, using the extension appropriate to our OS.
