Saving new entry 2024-05-28-09-11-42

--- a/gh-weblog-2/content/posts/markdown/2024-05-28-09-11-42.md
+++ b/gh-weblog-2/content/posts/markdown/2024-05-28-09-11-42.md
@@ -1,6 +1,6 @@
 Ever run into a Lightroom showing you this?
 
-![image-20240523094204167](./images/image-20240523094204167.png)
+![initial stuck image view](./images/stuck-image/initial-view.jpg)
 
 Lightroom shows you an image in your grid and strip views, but it's also super obvious there isn't actually an image file backing it. No filename, no metadata, just nothing. And you can't remove it: LR just ignores your delete button, and your context-menu-initiated "remove photo", and when you tell LR to optimize your catalog in the hopes of clearing this up, it's still there.
 
