Saving new entry 2024-05-28-09-11-42

--- a/gh-weblog-2/content/posts/markdown/2024-05-28-09-11-42.md
+++ b/gh-weblog-2/content/posts/markdown/2024-05-28-09-11-42.md
@@ -89,7 +89,7 @@ VALUES
 
 This tells us that there was a change to the image with its own numerical identifier `1672248`, stored in the "collection list" with identifier `1696395`, in a collection with identifier `5`. So let's quickly make sure this is, indeed, the quick collection using (in this case, but you have plenty of options) [db browser for sqlite]() 
 
-![image-20240523100618223](./image-20240523100618223.png)
+![a quick check...](./gh-weblog-2/images/stuck-image/quick-check.jpg)
 
 Collection 5 is indeed the quick collection: perfect, we can now confidently say that our offending image has `1672248` as its identifier.
 
