Saving new entry 2024-05-28-09-11-42

--- a/gh-weblog-2/content/posts/markdown/2024-05-28-09-11-42.md
+++ b/gh-weblog-2/content/posts/markdown/2024-05-28-09-11-42.md
@@ -238,6 +238,6 @@ Note that we're dealing with the identifier from the `Adobe_images` so we're del
 
 If we now open Lightroom on our updated catalog, what do we see?
 
-![image-20240523111441729](./images/image-20240523111441729.png)
+![the result](./gh-weblog-2/images/stuck-image/the-result.png)
 
 And that's our problem solved. No more phantom image. It's a good idea to run a (hopefully) quick catalog optimization, but other than that, it's back to not having to deal with this problem hopefully forever!
