Saving new entry 2024-08-01-02-02-49

--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -48,6 +48,6 @@ Let me unpack that script a little:
 
 And... uh... that's it?  We can just run this with `node pedals` and done: as long as we enable the "Rudder Sustain" MIDI input  in whatever DAW or standalone instrument we're using, those flight sim pedals are now MIDI pedals. 
 
-In essentially 20 lines of code.
+In less than 30 lines of code including vanity comments and console logs.
 
 Programming is a superpower.
