--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -1,12 +1,12 @@
-Did you know that there isn't just a dumb, simple Windows utility for turning a joystick or game controller into a MIDI device? Sure. you can find 15 year old utilities, and yes, you can find some dedicated "profile" utils that map specific game controller buttons to specific MIDI outs, but like... I have [VKB-Sim rudder pedals](https://www.vkbcontrollers.com/products/t-rudders-mk-v-rudder-pedals) and not a minute goes by while I'm at my desk that my feet don't think they're on sostenuto and sustain pedals. 
+Did you know that there isn't just a dumb, simple Windows utility for turning a joystick or game controller into a MIDI device? Sure. you can find 15 year old utilities (that have no docs, so good luck figuring out why they don't work even if they _run), and yes, you can find some dedicated "profile" utils that map specific game controller buttons to specific MIDI outs, but like... I have [VKB-Sim rudder pedals](https://www.vkbcontrollers.com/products/t-rudders-mk-v-rudder-pedals) because [I might like flight sim a little too much](https://pomax.github.io/are-we-flying/) and not a minute goes by while I'm sitting at my desk that my feet don't think they're resting on sostenuto and sustain pedals. Because there's also a keyboard sitting on my desk. 
 
 So can I please just get something that actually turns them into that when I need them to?
 
-And it turns out, I can, with like... 30 lines of code if I'm willing to use Node.js and [a utility that I already use](https://www.tobias-erichsen.de/software/loopmidi.html)?
+And it turns out, I can, with like... 30 lines of code if I'm willing to use [Node.js](https://nodejs.org/en) and LoopMIDI, [a utility that I already use](https://www.tobias-erichsen.de/software/loopmidi.html)?
 
 Step 1: create a virtual MIDI device called "Rudder Sustain". Inspired name, I know: I'm a programmer, we're fantastic at naming things.
 
-Step 2: write some code: `npm install node-hid easymidi`, and what is really a near-trivial `pedals.js` file:
+Step 2: write some code: `npm install node-hid easymidi`, and then something that's a near-trivial `pedals.js` file:
 
 ```
 import HID from "node-hid";
