Saving new entry 2024-08-01-02-02-49

--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -2,7 +2,25 @@ Did you know that there isn't just a dumb, simple Windows utility for turning a 
 
 So can I please just get something that actually turns them into that when I need them to?
 
-And it turns out, I can, with like... 30 lines of code if I'm willing to use [Node.js](https://nodejs.org/en) and LoopMIDI, [a utility that I already use](https://www.tobias-erichsen.de/software/loopmidi.html)?
+> "Have you tried Fergo JoystickMIDI?"
+
+I have, it has no documentation, and all the buttons are greyed out. Not a fan.
+
+> "Have you tried mJoy??"
+
+I have. Have you? Because if you did you wouldn't recommend it.
+
+> "You can do this in Max in Ableton just fine have y-"
+
+I own nine DAWs and "I stopped counting" standalone VSTi. You think I'm going to configure each of them separately?
+
+> "Well what about joy2midi?"
+
+A JACK-only linux suggestion. I like it. Except I'm on Windows so that's not going to help us much here.
+
+> "Fine, smartass, so: what, you gonna code your own solution??"
+
+Actually, as it turns out... yeah? I can write a universal solution that'll work for anything that can deal with more than one MIDI device (which is everything) in like... 30 lines of code, if I'm willing to use [Node.js](https://nodejs.org/en) and LoopMIDI, [a utility that I already use](https://www.tobias-erichsen.de/software/loopmidi.html)?
 
 Step 1: create a virtual MIDI device called "Rudder Sustain". Inspired name, I know: I'm a programmer, we're fantastic at naming things.
 
