Saving new entry 2024-08-01-02-02-49

--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -16,7 +16,7 @@ I own like ten regular DAWs (Ableton, Bitwig, Cubase, FL Studio, Serrato, Studio
 
 > "Well what about joy2midi?"
 
-A JACK-only linux suggestion. I like it. Except I'm on Windows so that's not going to help us much here.
+A JACK-only linux suggestion. I like where your head's at, except I'm on Windows so that's not going to help us much here.
 
 > "Fine, smartass, so: what, you gonna code your own solution??"
 
