Saving new entry 2024-08-01-02-02-49

--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -12,7 +12,7 @@ I have. Have you? Because if you did you wouldn't recommend it.
 
 > "You can do this in Max in Ableton just fine have y-"
 
-I own like ten regular DAWs (Ableton, Bitwig, Cubase, FL Studio, Serrato, Studio One, Reaper, Reason, ReNoise, Waveform) plus a bunch of esoteric or now-dead ones like [Flip](https://www.flipsampler.com/) or [SunVox](https://warmplace.ru/soft/sunvox/) or SonarX3 or [ZRhythm](https://www.zrythm.org/en/index.html) (I know, the last one's free. I signed up to their nightly subscription because I think that effort _absolutely_ deserves funding) and "I stopped counting" however many standalone VSTi. You think I'm going to configure each of them separately? Because I'm definitely not.
+I own like ten regular DAWs ([Ableton](https://www.ableton.com/en/), [Bitwig](https://www.bitwig.com/), [Cubase](https://www.steinberg.net/cubase/), [FL Studio](https://www.image-line.com), [Serrato](https://serato.com/), [Studio One](https://www.presonus.com/en/studio-one.html), [Reaper](https://www.reaper.fm/), [Reason](https://www.reasonstudios.com/), [ReNoise](https://www.renoise.com/), [Waveform](https://www.tracktion.com/products/waveform-pro)) plus a bunch of esoteric or now-dead ones like [Flip](https://www.flipsampler.com/) or [SunVox](https://warmplace.ru/soft/sunvox/) or [SonarX3](https://www.soundonsound.com/reviews/cakewalk-sonar-x3-producer) or [ZRhythm](https://www.zrythm.org/en/index.html) (I know, the last one's free. I signed up to their nightly subscription because I think that effort _absolutely_ deserves funding) and "I stopped counting" however many standalone VSTi. You think I'm going to configure each of them separately? Because I'm definitely not.
 
 > "Well what about joy2midi?"
 
