Saving new entry 2024-08-01-02-02-49

--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -2,7 +2,7 @@ Did you know that there isn't just a dumb, simple Windows utility for turning a 
 
 So can I please just get something that actually turns them into that when I need them to?
 
-> "Have you tried Fergo JoystickMIDI?"
+> "Have you tried [Fergo JoystickMIDI](https://www.fergonez.net/softwares/fjoymidi)?"
 
 I have, it has no documentation, and all the buttons are greyed out. Not a fan.
 
