--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -6,13 +6,17 @@ So can I please just get something that actually turns them into that when I nee
 
 I have, it has no documentation, and all the buttons are greyed out. Not a fan.
 
-> "Have you tried mJoy??"
+> "Have you tried [mJoy](http://www.otk.it/mjoy/)??"
 
-I have. Have you? Because if you did you wouldn't recommend it.
+I have. Have you? In 2024? Because if you have you wouldn't recommend it.
 
-> "You can do this in Max in Ableton just fine have y-"
+> "What about [Gamepad MIDI](https://www.kaskobi.com/gamepadmidi)?"
 
-I own like ten regular DAWs ([Ableton](https://www.ableton.com/en/), [Bitwig](https://www.bitwig.com/), [Cubase](https://www.steinberg.net/cubase/), [FL Studio](https://www.image-line.com), [Serrato](https://serato.com/), [Studio One](https://www.presonus.com/en/studio-one.html), [Reaper](https://www.reaper.fm/), [Reason](https://www.reasonstudios.com/), [ReNoise](https://www.renoise.com/), [Waveform](https://www.tracktion.com/products/waveform-pro)) plus a bunch of esoteric or now-dead ones like [Flip](https://www.flipsampler.com/) or [SunVox](https://warmplace.ru/soft/sunvox/) or [SonarX3](https://www.soundonsound.com/reviews/cakewalk-sonar-x3-producer) or [ZRhythm](https://www.zrythm.org/en/index.html) (I know, the last one's free. I signed up to their nightly subscription because I think that effort _absolutely_ deserves funding) and "I stopped counting" however many standalone VSTi. You think I'm going to configure each of them separately? Because I'm definitely not.
+I like Ableton, but I dont want a specif-
+
+> "You can do this in Max in Ableton just fine! Have y-"
+
+Look, I own something like ten DAWs ([Ableton](https://www.ableton.com/en/), [Bitwig](https://www.bitwig.com/), [Cubase](https://www.steinberg.net/cubase/), [FL Studio](https://www.image-line.com), [Serrato](https://serato.com/), [Studio One](https://www.presonus.com/en/studio-one.html), [Reaper](https://www.reaper.fm/), [Reason](https://www.reasonstudios.com/), [ReNoise](https://www.renoise.com/), [Waveform](https://www.tracktion.com/products/waveform-pro)) plus a bunch of esoteric or now-dead ones like [Flip](https://www.flipsampler.com/) or [SunVox](https://warmplace.ru/soft/sunvox/) or [SonarX3](https://www.soundonsound.com/reviews/cakewalk-sonar-x3-producer) or [ZRhythm](https://www.zrythm.org/en/index.html) (I know, the last one's free. I signed up to their nightly subscription because I think that effort _absolutely_ deserves funding) and "I stopped counting" however many standalone VSTi. You think I'm going to configure each of them separately? Because I'm definitely not.
 
 > "Well what about joy2midi?"
 
