--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -18,9 +18,9 @@ I like Ableton, but I dont want a specif-
 
 Look, I own something like ten DAWs ([Ableton](https://www.ableton.com/en/), [Bitwig](https://www.bitwig.com/), [Cubase](https://www.steinberg.net/cubase/), [FL Studio](https://www.image-line.com), [Serrato](https://serato.com/), [Studio One](https://www.presonus.com/en/studio-one.html), [Reaper](https://www.reaper.fm/), [Reason](https://www.reasonstudios.com/), [ReNoise](https://www.renoise.com/), [Waveform](https://www.tracktion.com/products/waveform-pro)) plus a bunch of esoteric or now-dead ones like [Flip](https://www.flipsampler.com/) or [SunVox](https://warmplace.ru/soft/sunvox/) or [SonarX3](https://www.soundonsound.com/reviews/cakewalk-sonar-x3-producer) or [ZRhythm](https://www.zrythm.org/en/index.html) (I know, the last one's free. I signed up to their nightly subscription because I think that effort _absolutely_ deserves funding) and "I stopped counting" however many standalone VSTi. You think I'm going to configure each of them separately? Because I'm definitely not.
 
-> "Well what about joy2midi?"
+> "Well what about [joy2midi](https://github.com/jessecrossen/hautmidi/tree/master/joy2midi)?"
 
-A JACK-only linux suggestion. I like where your head's at, except I'm on Windows so that's not going to help us much here.
+A JACK-only linux suggestion? I like where your head's at, except I'm on Windows so that's not going to help us much here.
 
 > "Fine, smartass, so: what, you gonna code your own solution??"
 
