--- a/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
+++ b/gh-weblog-2/content/posts/markdown/2024-08-01-02-02-49.md
@@ -1,4 +1,4 @@
-Did you know that there isn't just a dumb, simple Windows utility for turning a joystick or game controller into a MIDI device? Sure. you can find 15 year old utilities (that have no docs, so good luck figuring out why they don't work even if they _run), and yes, you can find some dedicated "profile" utils that map specific game controller buttons to specific MIDI outs, but like... I have [VKB-Sim rudder pedals](https://www.vkbcontrollers.com/products/t-rudders-mk-v-rudder-pedals) because [I might like flight sim a little too much](https://pomax.github.io/are-we-flying/) and not a minute goes by while I'm sitting at my desk that my feet don't think they're resting on sostenuto and sustain pedals. Because there's also a keyboard sitting on my desk. 
+Did you know that there isn't just a dumb, simple Windows utility for turning a joystick or game controller into a MIDI device? Sure. you can find 15 year old utilities (that have no docs, so good luck figuring out why they don't work even if they _run_), and yes, you can find some dedicated "profile" utils that map specific game controller buttons to specific MIDI outs, but like... I have [VKB-Sim rudder pedals](https://www.vkbcontrollers.com/products/t-rudders-mk-v-rudder-pedals) because [I might like flight sim a little too much](https://pomax.github.io/are-we-flying/) and not a minute goes by while I'm sitting at my desk that my feet don't think they're resting on sostenuto and sustain pedals. Because there's also a keyboard sitting on my desk. 
 
 So can I please just get something that actually turns them into that when I need them to?
 
